--- a/shard.yml
+++ b/shard.yml
@@ -1,8 +1,9 @@
 name: crystal-ann
-version: 0.1.0
+version:
 
 authors:
-  - Amber <contact@ambercr.io>
+  - V. Elenhaupt <velenhaupt@gmail.com>
+  - Hugo Abonizio <hugo_abonizio@hotmail.com>
 
 crystal: 0.23.1
 
@@ -11,11 +12,11 @@ license: MIT
 dependencies:
   amber:
     github: Amber-Crystal/amber
-    branch: master
+    version: 0.1.6
 
   granite_orm:
     github: kemalyst/granite-orm
-    version: ~> 0.6.0
+    version: ~> 0.6.4
  
   pg:
     github: will/crystal-pg
@@ -36,7 +37,6 @@ dependencies:
 
   hashids:
     github: splattael/hashids.cr
-    version: 0.2.1
 
 development_dependencies:
   spec2:
